[project]
name = "autorl-lrm"
version = "0.1.0"
description = "Automated RL Algorithm Search for Large Reasoning Models"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.3.0",
    "transformers>=4.45.0",
    "trl>=0.12.0",
    "datasets>=2.20.0",
    "accelerate>=0.34.0",
    "numpy>=1.26.0",
    "flash-attn>=2.6.0",
    "tqdm>=4.66.0",
    "peft>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.extra-build-dependencies]
autorl-lrm = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]
